--- a/frontend/src/pages/Login.css
+++ b/frontend/src/pages/Login.css
@@ -2,43 +2,122 @@
     max-width: 400px;
     margin: 0 auto;
     padding: 1rem;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 .login-section #h-login{
-    text-align: center;
+    font-size: 20px;
+    font-weight: normal;
 }
 
-.login-section .btn-google{
+.login-section .btn-login{
     width: 100%;
     padding: 0.5rem;
     margin-bottom: 1rem;
-    background-color: #4285F4;
-    color: #fff;
     border: none;
-    border-radius: 5px;
+    border-radius: 20px;
     font-size: 16px;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 10px;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+.login-section .btn-login:nth-of-type(1){
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+}
+
+.login-section .btn-login:nth-of-type(2){
+    background-color: #3F51B5;
+    color: white;
+}
+
+.login-section .btn-login:nth-of-type(3){
+    background-color: black;
+    color: white;
+}
+
+.line-bw{
+    display: flex;
+    font-weight: bold;
+    font-size: 20px;
+    color: black;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem 0;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+.line-bw .line{
+    width: 100%;
+    height: 2px;
+    background-color: black;
+    margin: 0 10px;
+}
+
+.login-section #p-login{
+    font-size: 15px;
+    font-weight: normal;
+    color: black;
+}
+
+.data-cont{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 1rem;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 .data-cont input{
-    width: 86vw;
-    padding: 0.5rem;
-    margin-bottom: 0.5rem;
+    width: 91%;
+    padding: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-bottom: 1rem;
+    font-size: 15px;
 }
 
-.data-cont .btn-send{
+.login-section .data-cont .btn-login{
     width: 100%;
-    padding: 0.5rem;
-    background-color: #333;
-    color: #fff;
+    color: black;
+    background-color: #fa7e17;
     border: none;
-    border-radius: 5px;
-    font-size: 16px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
 }
+
+.login-password {
+    padding: 2rem;
+    max-width: 400px;
+    margin: 0 auto;
+    text-align: center;
+  }
+  
+  .login-password input {
+    width: 100%;
+    padding: 0.7rem;
+    margin: 0.5rem 0;
+    font-size: 1rem;
+  }
+  
+  .pass-wrapper {
+    position: relative;
+    width: 100%;
+  }
+  
+  .pass-wrapper input {
+    padding-right: 2.5rem;
+  }
+  
+  .toggle-pass {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    color: #666;
+  }
+  
