--- a/frontend/src/components/BarSup.css
+++ b/frontend/src/components/BarSup.css
@@ -21,4 +21,11 @@
     font-size: 15px;
     font-weight: normal;
     margin-left: 20px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.bar-sup #link-sup:last-of-type{
+    margin-right: 2rem;
 }
