--- a/frontend/src/components/Search.css
+++ b/frontend/src/components/Search.css
@@ -1,7 +1,7 @@
 .search{
     width: 90vw;
     background-color: white;
-    height: 30px;
+    height: 50px;
     border-radius: 10px;
     display: flex;
     align-items: center;
@@ -14,6 +14,7 @@
     margin-left: 5px;
     height: 80%;
     font-size: 15px;
-    width: 90%;
+    width: 85%;
     font-weight: normal;
+    padding-left: 1rem;
 }
