--- a/frontend/src/pages/Login.css
+++ b/frontend/src/pages/Login.css
@@ -82,42 +82,67 @@
     font-size: 15px;
 }
 
-.login-section .data-cont .btn-login{
+.login-section .data-cont .btn-login , 
+.login-ps-cont .btn-login{
     width: 100%;
     color: black;
     background-color: #fa7e17;
     border: none;
+    padding: 1rem 0;
 }
 
-.login-password {
-    padding: 2rem;
-    max-width: 400px;
-    margin: 0 auto;
-    text-align: center;
-  }
-  
-  .login-password input {
+.login-ps-cont{
+    padding: 1rem 2rem;
+    font-family: 'Ubuntu', sans-serif;
+    height: 300px;
+}
+
+.login-ps-cont h2{
+    margin: 0;
+    margin-bottom: 1rem;
+}
+
+.login-ps-cont input {
+    width: 91%;
+    padding: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 15px;
+}
+
+.login-ps-cont a{
+    text-decoration: none;
+    color: #fa7e17;
+}
+
+.login-ps-cont a:hover{
+    color: black;
+}
+
+.pass-input-lg {
+    display: flex;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin: 1rem 0;
     width: 100%;
-    padding: 0.7rem;
-    margin: 0.5rem 0;
-    font-size: 1rem;
-  }
-  
-  .pass-wrapper {
-    position: relative;
-    width: 100%;
-  }
-  
-  .pass-wrapper input {
-    padding-right: 2.5rem;
-  }
-  
-  .toggle-pass {
-    position: absolute;
-    right: 10px;
-    top: 50%;
-    transform: translateY(-50%);
+    align-items: center;
+}
+
+.login-ps-cont .btn-login{
+    border-radius: 25px;
+}
+
+.pass-input-lg input {
+    width: 80%;
+    margin: 0;
+    padding: 1rem;
+    font-size: 15px;
+    border: none;
+    outline: none;
+}
+
+.pass-input-lg .toggle-pass {
     cursor: pointer;
-    color: #666;
-  }
-  
+    margin: 0;
+    padding: 0;
+}
