--- a/frontend/src/pages/Profile.css
+++ b/frontend/src/pages/Profile.css
@@ -62,31 +62,37 @@
     height: 50px;
     display: flex;
     align-items: center;
-    font-size: 20px;
+    font-size: 15px;
     color: black;
     padding-left: 1rem;
     padding-right: 1rem;
     gap: 1rem;
 }
 
-.user-button svg:last-of-type{
-    margin-left: auto;
+.icon-left,
+.icon-right {
+  width: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.user-buttons .user-button.mg{
-    margin-bottom: 1rem;
+.text {
+  flex-grow: 1;
+  text-align: left;
 }
 
-.user-buttons .user-button.logout{
-    margin: 1rem 0;
-    background-color: red;
-    color: white;
+.user-button.logout {
+  background-color: red;
+  color: white;
+  margin: 1rem 0;
 }
 
-.user-buttons .user-button:hover{
-    background-color: #fa7e17;
-    color: white;
+.user-button:hover {
+  background-color: #fa7e17;
+  color: white;
 }
-.user-buttons .user-button:hover svg{
-    color: white;
+
+.user-button:hover svg {
+  color: white;
 }
