--- a/frontend/src/pages/Categories.css
+++ b/frontend/src/pages/Categories.css
@@ -2,14 +2,24 @@
     display: flex;
     background-color: #f5f5f5;
     font-family: 'Ubuntu', sans-serif;
-    height: auto;
+    height: 71vh;
+    overflow: hidden;
   }
   
   .sidebar {
-    width: 20%;
-    padding: 1rem;
-    background-color: #ffffff;
+    width: 30%;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.05);
+  }
+
+  .sidebar, .categories-main {
+    overflow-y: auto;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+
+  .sidebar::-webkit-scrollbar,
+  .categories-main::-webkit-scrollbar {
+    display: none; 
   }
   
   .sidebar h3 {
@@ -25,14 +35,22 @@
   }
   
   .sidebar ul li {
-    padding: 0.5rem 0;
+    padding: 0.5rem;
     font-size: 15px;
     color: #333;
+  }
+
+  .sidebar #selected-cat{
+    background-color: white;
+    font-weight: 600;
+    border-left: solid 3px #fa7e17;
+    padding: 0.5rem 0.1rem;
   }
   
   .categories-main {
     flex: 1;
     padding: 1rem;
+    background-color: #ffffff;
   }
   
   .main-title {
@@ -44,7 +62,8 @@
   .category-grid {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 30px;
+    justify-content: center;
   }
   
   .category-item {
