--- a/frontend/src/pages/AddProduct.css
+++ b/frontend/src/pages/AddProduct.css
@@ -13,12 +13,13 @@
     font-family: 'Ubuntu', sans-serif;
   }
   
-  .step-wrapper {
+  .add-product-container .step-wrapper {
     display: flex;
     flex-direction: column;
+    margin-bottom: 20px;
   }
   
-  .step {
+ .add-product-container .step {
     display: flex;
     flex-direction: column;
     animation: slideIn 0.3s ease forwards;
@@ -27,26 +28,26 @@
     background-color: white;
   }
   
-  .step-sup {
+  .add-product-container .step-sup {
     margin-left: 20px;
     display: flex;
     align-items: center;
   }
   
-  .step-sup h1 {
+  .add-product-container .step-sup h1 {
     font-size: 15px;
     margin: 10px 0;
     font-weight: normal;
     color: gray;
   }
   
-  .step-sup h2 {
+  .add-product-container .step-sup h2 {
     font-size: 20px;
     margin: 0 0 10px 0;
     font-weight: normal;
   }
   
-  #btn-back {
+  .add-product-container #btn-back {
     background-color: transparent;
     border: none;
     color: #fa7e17;
@@ -58,27 +59,29 @@
     justify-content: center;
   }
   
-  .step label {
+  .add-product-container .step label {
     font-size: 13px;
     margin: 30px 0 5px 20px;
     font-weight: bold;
   }
   
-  .step input,
-  .step textarea {
-    padding: 1rem;
+  .add-product-container .step input,
+  .add-product-container .step textarea {
     border: 1px solid #ccc;
     border-radius: 5px;
-    margin: 0 20px 1rem 20px;
+    margin: 0 20px 0 20px;
     font-size: 15px;
+    font-family: 'Ubuntu', sans-serif;
+    height: 20px;
+    padding: 10px;
+  }
+
+  .add-product-container .step textarea {
+    height: 100px;
+    resize: none;
   }
   
-  .step textarea {
-    min-height: 100px;
-    resize: vertical;
-  }
-  
-  .step button {
+  .add-product-container .step button {
     margin: 20px 20px 30px 20px;
     padding: 1rem;
     background-color: #fa7e17;
@@ -89,27 +92,40 @@
     cursor: pointer;
   }
 
-  .step button.number-image{
+  .add-product-container .step button.number-image{
     margin-top: -160px;
   }
   
   .image-preview-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 30px;
+    gap: 10px 5%;
     margin: 10px 20px;
     justify-content: space-around;
   }
   
   .preview-box {
     width: 150px;
-    height: 150px;
+    height: 200px;
     border-radius: 8px;
     overflow: hidden;
     border: 1px solid #ccc;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+  }
+
+  .preview-box .delete-icon {
+    position: absolute;
+    top: 0;
+    right: 0;
+    cursor: pointer;
+    color: #fa7e17;
+    background-color: #fff;
+    border-radius: 50%;
+    font-size: 25px;
+
   }
 
   .preview-box.empty{
@@ -146,4 +162,89 @@
       transform: translateX(0);
     }
   }
+
+  .add-product-container .input-length {
+    font-size: 12px;
+    color: gray;
+    margin: auto;
+    margin-right: 20px;
+  }
+
+  .price-fieldset{
+    margin: 10px 20px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    height: auto; 
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 0;
+  }
+
+  .price-fieldset label:nth-of-type(1){
+    margin-top: 5px;
+    margin-left: 5px;
+  }
+
+  .price-fieldset label:nth-of-type(2){
+    margin-top: 5px;
+    margin-left: 5px;
+  }
+
+  .price-fieldset input:first-of-type{
+    margin: 0 5px;
+  }
+
+  .price-fieldset .price-input{
+    display: flex;
+    align-items: center;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    margin: 0 5px;
+  }
   
+  .price-fieldset .price-input input{
+    border: none;
+    outline: none;
+    border-radius: 0%;
+    margin: 0;
+    width: 70%;
+  }
+
+  .price-fieldset .price-input span{
+    border-right: 1px solid #ccc;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    display: flex;
+    height: 40px;
+    width: 20%;
+    margin: 0;
+    color: #fa7e17;
+    font-weight: 500;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .step button.add-price {
+    background: none;
+    border: none;
+    color: #fa7e17;
+    cursor: pointer;
+    font: inherit;
+    margin: 0 0 0 auto;
+    font-weight: bold;
+    padding: 0 20px 0 0;
+  }
+
+  .step button.add-price:hover{
+    text-decoration: underline;
+  }
+
+  .step button.add-price.delete{
+    color: red;
+    font-size: 13px;
+    margin-left: 20px;
+  }
+  
+  button{
+    font-family: 'Ubuntu', sans-serif;
+  }
