--- a/frontend/src/pages/AddProduct/AddProduct.css
+++ b/frontend/src/pages/AddProduct/AddProduct.css
@@ -5,6 +5,7 @@
     background-color: #f5f5f5;
     min-height: 75vh;
     font-family: 'Ubuntu', sans-serif;
+    overflow: hidden;
   }
   
   .add-title {
@@ -26,6 +27,7 @@
     border: 1px solid #ccc;
     border-radius: 10px;
     background-color: white;
+    margin-bottom: 5rem;
   }
   
   .add-product-container .step-sup {
@@ -247,4 +249,31 @@
   
   button{
     font-family: 'Ubuntu', sans-serif;
+  }
+
+ .category-container {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+    padding: 0 20px;
+  }
+
+  .category-container label{
+    margin-left: 0 !important;
+  }
+
+  .category-container .mi__menu-list {
+    max-height: 150px;
+    overflow-y: auto;
+    scrollbar-width: none;
+    transition: border 0.2s;
+  }
+
+  .category-container .mi__control--is-focused {
+    border: 2px solid black;
+    box-shadow: none;
+  }
+
+  .category-container .mi__menu-list::-webkit-scrollbar {
+    display: none;
   }
