--- a/frontend/src/pages/ProductInfo/ProductInfo.css
+++ b/frontend/src/pages/ProductInfo/ProductInfo.css
@@ -1,8 +1,7 @@
 .product-container {
   display: flex;
   flex-direction: column;
-  padding: 16px;
-  font-family: 'Arial', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
   background-color: #fff;
   color: #222;
 }
@@ -10,6 +9,8 @@
 .product-image-section {
   display: flex;
   align-items: center;
+  justify-content: space-around;
+  margin-top: 1rem;
 }
 
 .main-image {
@@ -37,34 +38,44 @@
 }
 
 .product-details {
-  margin-top: 20px;
+  padding: 16px;
 }
 
 .product-title {
-  font-size: 1.4rem;
+  font-size: 18px;
   font-weight: bold;
   margin-bottom: 4px;
 }
 
 .product-description {
   color: #666;
-  font-size: 0.95rem;
+  font-size: 13px;
   margin-bottom: 12px;
 }
 
-/* Precio grande destacado */
+.line{
+  width: 100%;
+  height: 1px;
+  background-color: #ddd;
+  margin: 16px 0;
+}
 .dynamic-price-highlight {
-  text-align: center;
-  background-color: #f0f8ff;
-  padding: 12px;
   margin-bottom: 16px;
-  border-radius: 8px;
 }
 
 .dynamic-price-highlight h3 {
-  font-size: 1.4rem;
+  font-size: 40px;
   color: #222;
-  margin-bottom: 4px;
+  margin: 0;
+  display: flex;
+  align-items: start;
+}
+
+.dynamic-price-highlight b {
+  font-size: 12px;
+  height: 100%;
+  margin: 4px 4px 0 0;
+  font-weight: normal;
 }
 
 .dynamic-price-highlight p {
