--- a/frontend/src/pages/UserChat/UserChat.css
+++ b/frontend/src/pages/UserChat/UserChat.css
@@ -162,3 +162,13 @@
   opacity: 0.4;
   cursor: not-allowed;
 }
+
+
+.audio-play-button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  color: white;
+  font-size: 20px;
+  margin: 0;
+}
