--- a/frontend/src/pages/MyProducts/MyProducts.css
+++ b/frontend/src/pages/MyProducts/MyProducts.css
@@ -1,11 +1,14 @@
 .products-add{
+    margin: 0;
     display: flex;
-    height: 200px;
-    width: auto;
+    flex-direction: column;
+    height: 260px;
+    width: 160px;
     margin: 10px;
-    border: 1px solid #ccc;
     border-radius: 5px;
     font-family: 'Ubuntu', sans-serif;
+    position: relative;
+    border: 1px solid #ccc;
 }
 
 .products-add .add-button{
