--- a/frontend/src/components/Cart/Cart.css
+++ b/frontend/src/components/Cart/Cart.css
@@ -6,19 +6,29 @@
     padding: 0;
     margin: 0;
     cursor: pointer;
+    position: relative;
 }
 
 .cart #icon-cart{
-    height: 20px;
+    height: 22px;
     color: white;
     margin: 0;
     padding: 0;
 }
 
 .cart #number{
-    color: #fa7e17;
-    font-size: 15px;
-    font-weight: bold;
+    color: white;
+    background-color: #fa7e17;
+    font-size: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height:  16px;
+    width: 16px;
     margin: 0;
     padding: 0;
+    position: absolute;
+    border-radius: 50%;
+    top: -5px;
+    right: -5px;
 }
