--- a/frontend/src/components/NavInf/NavInf.css
+++ b/frontend/src/components/NavInf/NavInf.css
@@ -10,7 +10,7 @@
     align-items: center;
     padding: 10px 0;
     z-index: 5;
-    height: 40px;
+    height: 35px;
 }
 
 .navInf ul {
@@ -43,8 +43,12 @@
 }
 
 .navInf a span {
-    font-size: 20px;
+    font-size: 15px;
     margin-top: 5px;
+}
+
+.navInf a span #icon-ul {
+    height: 20px;
 }
 
 .navInf a.selected {
