--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -6,16 +6,22 @@
 
 .header.minimal #h-title{
     margin: 0;
-    width: auto;
+    padding: 0;
 }
 
 .header{
     display: flex;
     background-color: #001634;
-    height: 23vh;
+    height: 11vh;
     width: 100vw;
     align-items: center;
     flex-direction: column;
+}
+
+.header .title-header{
+    display: flex;
+    align-items: center;
+    height: 60px;
 }
 
 .header #h-title{
@@ -23,9 +29,9 @@
     font-family: 'Sugo', sans-serif;
     font-weight: normal;
     font-size: 40px;
-    width: 80vw;
     text-align: center;
     cursor: pointer;
+    margin: 0 10px 0 10px;
 }
 
 .header .buttons{
