--- a/frontend/src/pages/Register/Register.css
+++ b/frontend/src/pages/Register/Register.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     padding: 0 1rem;
     background-color: #f5f5f5;
-    height: 70vh;
+    height: 80vh;
     overflow: hidden;
 }
 
@@ -71,6 +71,15 @@
     margin: 0 20px;
 }
 
+.input-register{
+    width: auto;
+}
+
+.label-register{
+    font-size: 15px;
+    margin: 0 20px !important;
+}
+
 .step button{
     margin: 20px 20px 0 20px;
     padding: 1rem;
@@ -101,6 +110,7 @@
     height: 2px;
     background-color: #ccc;
     margin: 20px 20px 0 20px;
+    width: auto;
 }
 
 .step #link-login{
@@ -197,4 +207,55 @@
 
 .step #last-btn{
     margin-bottom: 30px;
+}
+
+.send-code{
+    background-color: transparent !important;
+    border: none !important;
+    color: #fa7e17 !important;
+    font-size: 15px !important;
+    cursor: pointer !important;
+    padding: 0 !important;
+    text-decoration: underline !important;
+    text-align: center !important;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: start !important;
+    width: auto !important;
+}
+
+.input-register.last-name{
+    margin-bottom: 20px;
+}
+
+.address-cont{
+    margin: 0 20px;
+}
+
+.address-cont .address{
+    margin-left: 0 !important;
+}
+
+.address-cont .city{
+    margin-top: 20px !important;
+}
+
+.address-cont .mi__menu-list {
+    max-height: 150px;
+    overflow-y: auto;
+    scrollbar-width: none;
+    transition: border 0.2s;
+}
+
+.address-cont .mi__control--is-focused{
+    border: 2px solid black;
+    box-shadow: none;
+}
+
+.address-cont .mi__menu-list::-webkit-scrollbar, .price-select-unit__menu-list::-webkit-scrollbar {
+    display: none;
+}
+
+.blank{
+    height: 20px;
 }
