--- a/frontend/src/components/Alert/Alert.css
+++ b/frontend/src/components/Alert/Alert.css
@@ -19,7 +19,7 @@
   gap: 12px;
   z-index: 1000;
   font-size: 1.1rem;
-  max-width: 80%;
+  width: 250px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
