--- a/frontend/src/pages/Register/Register.css
+++ b/frontend/src/pages/Register/Register.css
@@ -220,8 +220,9 @@
     text-align: center !important;
     display: flex !important;
     align-items: center !important;
-    justify-content: start !important;
+    justify-content: end !important;
     width: auto !important;
+    margin-bottom: 20px !important;
 }
 
 .input-register.last-name{
