--- a/frontend/src/pages/ProviderRequest/ProviderRequest.css
+++ b/frontend/src/pages/ProviderRequest/ProviderRequest.css
@@ -61,3 +61,11 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
+.btn-back-request{
+  height: 60px;
+}
+
+.register-container .step-sup{
+  height: 60px;
+}
