--- a/frontend/src/pages/Plans/Plans.css
+++ b/frontend/src/pages/Plans/Plans.css
@@ -4,10 +4,10 @@
   gap: 2rem;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 1rem;
   align-items: center;
   justify-content: left;
   font-family: 'Ubuntu', sans-serif;
+  padding: 1rem;
 }
 
 @media (min-width: 992px) {
@@ -34,7 +34,7 @@
   position: absolute;
   top: 0;
   right: 0;
-  background-color: #e11d48; /* rojo rosado */
+  background-color: #001634; /* rojo rosado */
   color: white;
   padding: 0.4rem 1rem;
   font-size: 0.9rem;
@@ -49,8 +49,8 @@
 }
 
 .plan-title {
-  font-size: 1.75rem;
-  font-weight: 600;
+  font-size: 20px;
+  font-weight: 500;
   color: #111827;
   margin-bottom: 1rem;
   text-align: left;
@@ -58,10 +58,10 @@
 
 .plan-price {
   display: flex;
-  justify-content: center;
+  justify-content: left;
   align-items: baseline;
   margin-bottom: 2rem;
-  text-align: left;
+  color: #111827;
 }
 
 .plan-price .amount {
@@ -89,21 +89,25 @@
 
 .plan-feature-item {
   display: flex;
-  align-items: center;
+  align-items: start;
   justify-content: left;
-  color: #374151;
+  color: #001634;
 }
 
-.check-icon {
-  color: #10b981;
+.plan-feature-item .check-icon {
+  color: #fa7e17;
   margin-right: 0.5rem;
+  margin-top: 2px;
+}
+
+.plan-feature-item span{
+  margin: 0;
 }
 
 .plan-button {
   width: 100%;
   padding: 0.75rem;
   font-size: 1rem;
-  font-weight: bold;
   border-radius: 0.5rem;
   border: none;
   cursor: pointer;
@@ -112,8 +116,8 @@
 
 .plan-button.outline {
   background-color: white;
-  color: #4f46e5;
-  border: 2px solid #4f46e5;
+  color: #fa7e17;
+  border: 2px solid #fa7e17;
 }
 
 .plan-button.outline:hover {
@@ -121,7 +125,7 @@
 }
 
 .plan-button.primary {
-  background-color: #4f46e5;
+  background-color: #fa7e17;
   color: white;
 }
 
@@ -144,7 +148,12 @@
 .plans-title {
   font-size: 2rem;
   font-weight: 700;
-  color: #333;
+  color: #001634;
+}
+
+.plans-title b{
+  color: #fa7e17;
+  font-weight: 700;
 }
 
 .plans-description {
@@ -152,4 +161,5 @@
   color: #555;
   margin-top: 10px;
 }
+
 
