--- a/frontend/src/pages/OrdersPage/OrdersPage.css
+++ b/frontend/src/pages/OrdersPage/OrdersPage.css
@@ -4,3 +4,14 @@
     background-color: #f9f9f9;
     padding: 15px;
 }
+
+.new-order-btn{
+    background-color: #fa7e17;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 15px;
+    width: auto;
+}
